Remove tests before running hassfest

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -22,6 +22,10 @@ jobs:
     - name: 📥 Checkout the repository
       uses: actions/checkout@v4.1.1
 
+    # Test files conflics with running hassfest
+    - name: Remove tests
+      run: rm -rf tests
+
     - name: 🏃 Hassfest validation
       uses: "home-assistant/actions/hassfest@master"
 
