add psutil_home_assistant test requirement

--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -2,6 +2,7 @@
 aresponses==2.1.6
 asynctest==0.13.0
 homeassistant
+psutil_home_assistant
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
