--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -4,6 +4,7 @@ asynctest==0.13.0
 homeassistant
 psutil_home_assistant
 sqlalchemy
+fnv_hash_fast
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
