--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,12 +1,13 @@
 -r requirements_base.txt
 aresponses==2.1.6
 asynctest==0.13.0
-homeassistant
-psutil_home_assistant
-sqlalchemy
 fnv_hash_fast
-pytest==7.4.3
+homeassistant
+PIL
+psutil_home_assistant
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 pytest-snapshot==0.9.0
 pytest-socket==0.6.0
+pytest==7.4.3
+sqlalchemy
