--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -3,7 +3,7 @@ aresponses==2.1.6
 asynctest==0.13.0
 fnv_hash_fast
 homeassistant
-PIL
+Pillow
 psutil_home_assistant
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
