--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -2,9 +2,10 @@
 aresponses==2.1.6
 asynctest==0.13.0
 fnv_hash_fast
+hass_frontend
 homeassistant
-janus
 Pillow
+janus
 psutil_home_assistant
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
