--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,15 +1,15 @@
 -r requirements_base.txt
 aresponses==2.1.6
 asynctest==0.13.0
-fnv_hash_fast
+fnv-hash-fastt==0.5.0
 home-assistant-frontend
 homeassistant
-janus
-Pillow
-psutil_home_assistant
+janus==1.0.0
+Pillow==10.1.0
+psutil-home-assistant==0.0.1
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 pytest-snapshot==0.9.0
 pytest-socket==0.6.0
-sqlalchemy
+SQLAlchemy==2.0.23
