--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,7 +1,7 @@
 -r requirements_base.txt
 aresponses==2.1.6
 asynctest==0.13.0
-fnv-hash-fastt==0.5.0
+fnv-hash-fast==0.5.0
 home-assistant-frontend
 homeassistant
 janus==1.0.0
