Add basic fixtures for all categories

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ combine_as_imports = true
 
 
 [tool.pytest.ini_options]
-addopts = "-rxf -x -v -l --cov=./ --cov-report=xml"
+addopts = "-rf -v -l --cov=./ --cov-report=xml"
 filterwarnings = [
     "ignore::DeprecationWarning",
 ]
