--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ combine_as_imports = true
 
 
 [tool.pytest.ini_options]
+asyncio_mode="auto"
 addopts = "-rf -v -l --cov=./ --cov-report=xml"
 filterwarnings = [
     "ignore::DeprecationWarning",
